--- a/www/views/ExpenseList.html
+++ b/www/views/ExpenseList.html
@@ -9,7 +9,7 @@
     </div>
 </div>
 
-<div class="start-new-travel-button " ng-click="startNewTravel()">
+<div class="start-new-travel-button " ng-click="addExpenseItem()">
     <div class="text">
         Add an new expense item
     </div>
