--- a/www/views/TravelList.html
+++ b/www/views/TravelList.html
@@ -4,7 +4,7 @@
             {{travel.place}}
         </div>
         <div>
-            {{travel.expenseList}}
+            Total amount: {{travel.totalAmount}}
         </div>
     </div>
 </div>
