--- a/www/views/addExpenseItemPopup.html
+++ b/www/views/addExpenseItemPopup.html
@@ -1,13 +1,24 @@
 <div>
     <input type="text" placeholder="Enter item name" ng-model="newExpense.itemName">
 </div>
+
 <div>
     <input type="number" placeholder="Enter amount" ng-model="newExpense.amount">
 </div>
+
 <label class="text-center"><h5>Select shared people</h5></label>
-<!--<div class="row" >-->
+
+<label class="row" ng-repeat="people in travel.peopleList">
+    <input class="col col-10" type="checkbox" ng-model="newExpense.sharedPeople[travel.peopleList.indexOf(people)].checked" ng-change="chengeSharedPeopleNumber(newExpense.sharedPeople[travel.peopleList.indexOf(people)].checked)">
+    {{people}}
+</label>
+
+<label class="text-center"><h5>{{color.name}} paid this item</h5></label>
+
+<form>
     <label class="row" ng-repeat="people in travel.peopleList">
-        <input class="col col-10" type="checkbox" ng-model="newExpense.sharedPeople[travel.peopleList.indexOf(people)].checked" ng-change="chengeSharedPeopleNumber(newExpense.sharedPeople[travel.peopleList.indexOf(people)].checked)">
+        <input class="col col-10" type="radio" ng-model="$parent.color.name" ng-value="people">
         {{people}}
     </label>
-<!--</div>-->
+<!--    <tt>color = {{color.name | json}}</tt><br/>-->
+</form>
