finish adding peaple to new travel

--- a/www/views/ExpenseList.html
+++ b/www/views/ExpenseList.html
@@ -8,10 +8,8 @@
         </div>
     </div>
 
-    <div class="button" ng-click="staticResult()">
-        <div class="text">
-            See statistic
-        </div>
+    <div class="row button" ng-click="staticResult()">
+        See statistic
     </div>
 </div>
 
