--- a/www/views/TravelList.html
+++ b/www/views/TravelList.html
@@ -9,7 +9,7 @@
     </div>
 </div>
 
-<div class="start-new-travel-button " ng-click="startNewTravel()">
+<div class="start-new-travel-button " ng-click="showStartNewTravelPopup()">
     <div class="text">
         Start a new travel
     </div>
