fix dicimal number. Working on date choice

--- a/www/views/TravelList.html
+++ b/www/views/TravelList.html
@@ -4,6 +4,9 @@
             {{travel.place}}
         </div>
         <div>
+            Date: {{travel.dStart}} to {{travel.dEnd}}
+        </div>
+        <div>
             Total amount: {{travel.totalAmount}}
         </div>
     </div>
