--- a/www/views/startNewTravelPopup.html
+++ b/www/views/startNewTravelPopup.html
@@ -1,5 +1,10 @@
 <div>
+    Travel Place: 
     <input type="text" placeholder="Enter travel place" ng-model="newTravel.place">
+    Start Date:
+    <input type="date" ng-model="newTravel.dStart">
+    End Date:
+    <input type="date" ng-model="newTravel.dEnd">
 </div>
 
 <!--<label class="text-center"><p>Click next to edit participate people list</p></label>-->
