--- a/www/views/statisticResult.html
+++ b/www/views/statisticResult.html
@@ -4,13 +4,13 @@
             Person name: {{people.name}}
         </div>
         <div>
-            Should pay: {{people.shouldExpense}}
+            Should pay: {{people.shouldExpense.toFixed(2)}}
         </div>
         <div>
-            Actual pay: {{people.actualExpense}}
+            Actual pay: {{people.actualExpense.toFixed(2)}}
         </div>
         <div style="color:red">
-            Result: You should give {{people.shouldExpense - people.actualExpense}} to the group
+            Result: You should give {{(people.shouldExpense - people.actualExpense).toFixed(2)}} to the group
         </div>
     </div>
 </div>
